--- a/WindowsFactura/WindowsFactura.csproj
+++ b/WindowsFactura/WindowsFactura.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Caso 3\Tripulacion.cs" />
     <Compile Include="Caso 4\Alumno.cs" />
     <Compile Include="Caso 4\Docente.cs" />
+    <Compile Include="Caso 5\Cliente.cs" />
+    <Compile Include="Caso 5\DatosContacto.cs" />
+    <Compile Include="Caso 5\Empleado.cs" />
     <Compile Include="Caso 6\Clinica.cs" />
     <Compile Include="Caso 6\Director.cs" />
     <Compile Include="Entidades\Categoria.cs" />
